--- a/src/flipbuq.ui
+++ b/src/flipbuq.ui
@@ -9,8 +9,9 @@
         <property name="visible">True</property>
         <signal handler="onShutdown" name="delete-event"/>
         <child>
-            <object class="GtkVBox" id="vbox1">
+            <object class="GtkBox" id="vbox1">
                 <property name="visible">True</property>
+                <property name="orientation">GTK_ORIENTATION_VERTICAL</property>
                 <child>
                     <object class="GtkDrawingArea" id="VideoWindow">
                         <property name="height_request">480</property>
@@ -20,9 +21,10 @@
                     </object>
                 </child>
                 <child>
-                    <object class="GtkHBox" id="hbox1">
+                    <object class="GtkBox" id="hbox1">
                         <property name="spacing">5</property>
-                        <property name="visible">True</property>
+                        <property name="homogeneous">True</property>
+                        <property name="orientation">GTK_ORIENTATION_HORIZONTAL</property>
                         <child>
                             <object class="GtkButton" id="BtnPlay">
                                 <property name="border_width">10</property>
