--- a/src/flipbuq.ui
+++ b/src/flipbuq.ui
@@ -1,17 +1,35 @@
-<?xml version="1.0" standalone="no"?> <!--*- mode: xml -*-->
-<interface domain="flipbuq">
-    <object class="GtkWindow" id="MainWindow">
-        <property name="border_width">5</property>
-        <property name="default_height">400</property>
-        <property name="default_width">500</property>
-        <property name="mnemonics_visible">False</property>
-        <property name="title" translatable="yes">FlipBuq -  0.1</property>
-        <property name="visible">True</property>
-        <signal handler="onShutdown" name="delete-event"/>
+<?xml version="1.0" encoding="UTF-8"?> <!--*- mode: xml -*-->
+<interface domain="org.collective.flipbuq">
+    <template class="FlipBuq" parent="GtkApplicationWindow">
+        <property name="title" translatable="yes">FlipBuq</property>
+        <property name="default-height">400</property>
+        <property name="default-width">500</property>
+        <property name="gtk-shell-shows-menubar">True</property>
+        <menu id="FlipBuqMmenu">
+            <section>
+                <item>
+                    <attribute name="label" translatable="yes">_Preferences</attribute>
+                    <attribute name="action">app.preferences</attribute>
+                </item>
+            </section>
+            <section>
+                <item>
+                    <attribute name="label" translatable="yes">_Quit</attribute>
+                    <attribute name="action">app.quit</attribute>
+                </item>
+            </section>
+        </menu>
         <child>
-            <object class="GtkBox" id="vbox1">
+            <object class="GtkBox" id="content_box">
                 <property name="visible">True</property>
                 <property name="orientation">GTK_ORIENTATION_VERTICAL</property>
+                <child>
+                    <object class="GtkHeaderBar" id="header">
+                        <property name="visible">True</property>
+                        <property name="title">FlipBuq</property>
+                        <property name="show-close-button">True</property>
+                    </object>
+                </child>
                 <child>
                     <object class="GtkDrawingArea" id="VideoWindow">
                         <property name="height_request">480</property>
@@ -137,12 +155,32 @@
                                 <property name="position">7</property>
                             </packing>
                         </child>
+                        <child>
+                            <object class="GtkButton" id="BtnSource">
+                                <property name="border_width">10</property>
+                                <property name="visible">True</property>
+                                <signal name="clicked" handler="onSelectSource"/>
+                                <child>
+                                    <object class="GtkImage" id="imagePreferences">
+                                        <property name="stock">gtk-save-as</property>
+                                        <property name="visible">True</property>
+                                    </object>
+                                </child>
+                            </object>
+                            <packing>
+                                <property name="position">7</property>
+                            </packing>
+                        </child>
                     </object>
-                    <packing>
-                        <property name="position">1</property>
-                    </packing>
                 </child>
             </object>
         </child>
-    </object>
+        <object class="GtkWindow" id="MainWindow">
+            <property name="border_width">5</property>
+            <property name="mnemonics_visible">False</property>
+            <property name="title" translatable="yes">FlipBuq -  0.1</property>
+            <property name="visible">True</property>
+            <signal handler="onShutdown" name="delete-event"/>
+        </object>
+    </template>
 </interface>
